--- a/quartier/adamville.html
+++ b/quartier/adamville.html
@@ -23,19 +23,19 @@
                     <div class="carte-container">
                         <img src="../images/adamville.webp" alt="carte d'Adamville'" class="carte-img">
                         <div class="marker-container" id="marker-container-rue-de-bir-hakeim" data-family="rue-de-bir-hakeim">
-                            <img src="../images/marker.webp" alt="Marker Rue de Bir-Hakeim" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Rue de Bir Hakeim" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-place-du-marechal-juin" data-family="place-du-marechal-juin">
-                            <img src="../images/marker.webp" alt="Marker Place du Maréchal-Juin" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Place du Maréchal Juin" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-rue-edouard-vallerand" data-family="rue-edouard-vallerand">
                             <img src="../images/marker.webp" alt="Marker Rue Edouard Vallerand" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-carrefour-du-huit-mai-1945" data-family="carrefour-du-huit-mai-1945">
-                            <img src="../images/marker.webp" alt="Marker Carrefour du Huit-Mai 1945" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Carrefour du 8 Mai 1945" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-avenue-et-place-charles-de-gaulle" data-family="avenue-et-place-charles-de-gaulle">
-                            <img src="../images/marker.webp" alt="Marker Avenue et Place Charles-de-Gaulle" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Avenue et Place Charles de Gaulle" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-rue-de-metz" data-family="rue-de-metz">
                             <img src="../images/marker.webp" alt="Marker Rue de Metz" class="marker">
@@ -43,40 +43,34 @@
                     </div>
                     
                     <div class="famille-info" id="info-rue-de-bir-hakeim">
-                        <h3>La rue de Bir-Hakeim</h3>
-                        <img src="../images/bir-hakeim.webp" alt="Rue de Bir-Hakeim" class="famille-img">
-                        <p>La rue de Bir-Hakeim</p>
-                        <a href="../rues/rue-de-bir-hakeim.html" class="btn-decouvrir">Découvrez la rue de Bir-Hakeim</a>
+                        <h3>la Rue de Bir Hakeim</h3>
+                        <img src="../images/bir-hakeim.webp" alt="Rue de Bir Hakeim" class="famille-img">
+                        <a href="../rues/rue-de-bir-hakeim.html" class="btn-decouvrir">Découvrez l'histoire de la Rue de Bir Hakeim</a>
                     </div>
                     <div class="famille-info" id="info-place-du-marechal-juin">
-                        <h3>la Place du Maréchal-Juin</h3>
-                        <img src="../images/juin.webp" alt="Place du Maréchal-Juin" class="famille-img">
-                        <p>Découvrez la Place du Maréchal-Juin</p>
-                        <a href="../rues/place-du-marechal-juin.html" class="btn-decouvrir">Découvrez la Place du Maréchal-Juin</a>
+                        <h3>la Place du Maréchal Juin</h3>
+                        <img src="../images/juin.webp" alt="Place du Maréchal Juin" class="famille-img">
+                        <a href="../rues/place-du-marechal-juin.html" class="btn-decouvrir">Découvrez l'histoire de la Place du Maréchal Juin</a>
                     </div>
                     <div class="famille-info" id="info-rue-edouard-vallerand">
-                        <h3>La Rue Edouard Vallerand</h3>
+                        <h3>la Rue Edouard Vallerand</h3>
                         <img src="../images/edouard-vallerand.webp" alt="Rue Edouard Vallerand" class="famille-img">
-                        <p>Découvrez la Rue Edouard Vallerand</p>
-                        <a href="../rues/rue-edouard-vallerand.html" class="btn-decouvrir">Découvrez la Rue Edouard Vallerand</a>
+                        <a href="../rues/rue-edouard-vallerand.html" class="btn-decouvrir">Découvrez l'histoire de la Rue Edouard Vallerand</a>
                     </div>
                     <div class="famille-info" id="info-carrefour-du-huit-mai-1945">
-                        <h3>Le Carrefour du Huit-Mai 1945</h3>
-                        <img src="../images/huit-mai.webp" alt="Carrefour du Huit-Mai 1945" class="famille-img">
-                        <p>Découvrez le Carrefour du Huit-Mai 1945</p>
-                        <a href="../rues/carrefour-du-huit-mai-1945.html" class="btn-decouvrir">Découvrez le Carrefour du Huit-Mai 1945</a>
+                        <h3>le Carrefour du 8 Mai 1945</h3>
+                        <img src="../images/huit-mai.webp" alt="Carrefour du 8 Mai 1945" class="famille-img">
+                        <a href="../rues/carrefour-du-huit-mai-1945.html" class="btn-decouvrir">Découvrez l'histoire du Carrefour du 8 Mai 1945</a>
                     </div>
                     <div class="famille-info" id="info-avenue-et-place-charles-de-gaulle">
-                        <h3>l'Avenue et la Place Charles-de-Gaulle</h3>
-                        <img src="../images/charles-de-gaulle.webp" alt="Avenue et Place Charles-de-Gaulle" class="famille-img">
-                        <p>Découvrez l'Avenue et la Place Charles-de-Gaulle</p>
-                        <a href="../rues/avenue-et-place-charles-de-gaulle.html" class="btn-decouvrir">Découvrez l'Avenue et la Place Charles-de-Gaulle</a>
+                        <h3>l'Avenue et la Place Charles de Gaulle</h3>
+                        <img src="../images/charles-de-gaulle.webp" alt="Avenue et Place Charles de Gaulle" class="famille-img">
+                        <a href="../rues/avenue-et-place-charles-de-gaulle.html" class="btn-decouvrir">Découvrez l'histoire de l'Avenue et de la Place Charles de Gaulle</a>
                     </div>
                     <div class="famille-info" id="info-rue-de-metz">
                         <h3>la Rue de Metz</h3>
                         <img src="../images/metz.webp" alt="la Rue de Metz" class="famille-img">
-                        <p>Découvrez la Rue de Metz</p>
-                        <a href="../rues/rue-de-metz.html" class="btn-decouvrir">Découvrez la Rue de Metz</a>
+                        <a href="../rues/rue-de-metz.html" class="btn-decouvrir">Découvrez l'histoire de la Rue de Metz</a>
                     </div>
                 </div>
             </div>
