--- a/quartier/la-varenne.html
+++ b/quartier/la-varenne.html
@@ -26,7 +26,7 @@
                             <img src="../images/marker.webp" alt="Marker Place de Stalingrad" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-place-jean-moulin" data-family="place-jean-moulin">
-                            <img src="../images/marker.webp" alt="Marker Place Jean-Moulin" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Place Jean Moulin" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-quai-winston-churchill" data-family="quai-winston-churchill">
                             <img src="../images/marker.webp" alt="Marker Quai Winston Churchill" class="marker">
@@ -35,22 +35,19 @@
                     
                     
                     <div class="famille-info" id="info-place-de-stalingrad">
-                        <h3>Place de Stalingrad</h3>
+                        <h3>la Place de Stalingrad</h3>
                         <img src="../images/stalingrad.webp" alt="Place de Stalingrad" class="famille-img">
-                        <p>Place de Stalingrad</p>
-                        <a href="../rues/place-de-stalingrad.html" class="btn-decouvrir">Découvrez la Place de Stalingrad</a>
+                        <a href="../rues/place-de-stalingrad.html" class="btn-decouvrir">Découvrez l'histoire de la Place de Stalingrad</a>
                     </div>
                     <div class="famille-info" id="info-place-jean-moulin">
-                        <h3>Place Jean-Moulin</h3>
-                        <img src="../images/jean-moulin.webp" alt="Place Jean-Moulin" class="famille-img">
-                        <p>Place Jean-Moulin</p>
-                        <a href="../rues/place-jean-moulin.html" class="btn-decouvrir">Découvrez la Place Jean-Moulin</a>
+                        <h3>la Place Jean Moulin</h3>
+                        <img src="../images/jean-moulin.webp" alt="Place Jean Moulin" class="famille-img">
+                        <a href="../rues/place-jean-moulin.html" class="btn-decouvrir">Découvrez l'histoire de la Place Jean Moulin</a>
                     </div>
                     <div class="famille-info" id="info-quai-winston-churchill">
-                        <h3>Quai Winston Churchill</h3>
+                        <h3>le Quai Winston Churchill</h3>
                         <img src="../images/churchill.webp" alt="Quai Winston Churchill" class="famille-img">
-                        <p>Quai Winston Churchill</p>
-                        <a href="../rues/quai-winston-churchill.html" class="btn-decouvrir">Découvrez le Quai Winston Churchill</a>
+                        <a href="../rues/quai-winston-churchill.html" class="btn-decouvrir">Découvrez l'histoire du Quai Winston Churchill</a>
                     </div>
                 </div>
             </div>
