--- a/quartier/le-parc-saint-maur.html
+++ b/quartier/le-parc-saint-maur.html
@@ -23,60 +23,54 @@
                     <div class="carte-container">
                         <img src="../images/leparc.webp" alt="Carte de Saint-Maur le Parc" class="carte-img">
                         <div class="marker-container" id="marker-container-avenue-de-lattre-de-tassigny" data-family="avenue-de-lattre-de-tassigny">
-                            <img src="../images/marker.webp" alt="Marker Avneue De Lattre-de-Tassigny" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Avneue De Lattre de Tassigny" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-avenue-du-general-leclerc" data-family="avenue-du-general-leclerc">
-                            <img src="../images/marker.webp" alt="Marker Avenue du Général-Leclerc" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Avenue du Général Leclerc" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-square-emilie-tillion" data-family="square-emilie-tillion">
-                            <img src="../images/marker.webp" alt="Marker Square Émilie-Tillion" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Square Émilie Tillion" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-avenue-des-fusilles-de-chateaubriant" data-family="avenue-des-fusilles-de-chateaubriant">
                             <img src="../images/marker.webp" alt="Marker Avenue des Fusillés de Châteaubriant" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-avenue-leopold-sedar-senghor" data-family="avenue-leopold-sedar-senghor">
-                            <img src="../images/marker.webp" alt="Marker Avenue Léopold-Sédar-Senghor" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Avenue Léopold Sédar Senghor" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-avenue-pierre-brossolette" data-family="avenue-pierre-brossolette">
-                            <img src="../images/marker.webp" alt="Marker Avenue Pierre-Brossolette" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Avenue Pierre Brossolette" class="marker">
                         </div>
                     </div>
                     
                     <div class="famille-info" id="info-avenue-de-lattre-de-tassigny">
-                        <h3>l'avenue De Lattre-de-Tassigny</h3>
-                        <img src="../images/tassigny.webp" alt="l'avenue De Lattre-de-Tassigny" class="famille-img">
-                        <p>Découvrez l'avenue De Lattre-de-Tassigny</p>
-                        <a href="../rues/avenue-de-lattre-de-tassigny.html" class="btn-decouvrir">Découvrez l'avenue De Lattre-de-Tassigny</a>
+                        <h3>l'Avenue De Lattre de Tassigny</h3>
+                        <img src="../images/tassigny.webp" alt="l'avenue De Lattre de Tassigny" class="famille-img">
+                        <a href="../rues/avenue-de-lattre-de-tassigny.html" class="btn-decouvrir">Découvrez l'histoire de l'avenue De Lattre de Tassigny</a>
                     </div>
                     <div class="famille-info" id="info-avenue-du-general-leclerc">
-                        <h3>l'Avenue du Général-Leclerc</h3>
-                        <img src="../images/leclerc.webp" alt="Avenue du Général-Leclerc" class="famille-img">
-                        <p>Découvrez l'Avenue du Général-Leclerc</p>
-                        <a href="../rues/avenue-du-general-leclerc.html" class="btn-decouvrir">Découvrez l'Avenue du Général-Leclerc</a>
+                        <h3>l'Avenue du Général Leclerc</h3>
+                        <img src="../images/leclerc.webp" alt="Avenue du Général Leclerc" class="famille-img">
+                        <a href="../rues/avenue-du-general-leclerc.html" class="btn-decouvrir">Découvrez l'histoire de l'Avenue du Général Leclerc</a>
                     </div>
                     <div class="famille-info" id="info-square-emilie-tillion">
-                        <h3>le Square Émilie-Tillion</h3>
-                        <img src="../images/emilie-tillion.webp" alt="Square Émilie-Tillion" class="famille-img">
-                        <p>Découvrez le Square Émilie-Tillion</p>
-                        <a href="../rues/square-emilie-tillion.html" class="btn-decouvrir">Découvrez le Square Émilie-Tillion</a>
+                        <h3>le Square Émilie Tillion</h3>
+                        <img src="../images/emilie-tillion.webp" alt="Square Émilie Tillion" class="famille-img">
+                        <a href="../rues/square-emilie-tillion.html" class="btn-decouvrir">Découvrez l'histoire du Square Émilie Tillion</a>
                     </div>
                     <div class="famille-info" id="info-avenue-des-fusilles-de-chateaubriant">
                         <h3>l'Avenue des Fusillés de Châteaubriant</h3>
                         <img src="../images/chateaubriant.webp" alt="Avenue des Fusillés de Châteaubriant" class="famille-img">
-                        <p>Découvrez l'Avenue des Fusillés de Châteaubriant</p>
-                        <a href="../rues/avenue-des-fusilles-de-chateaubriant.html" class="btn-decouvrir">Découvrez l'Avenue des Fusillés de Châteaubriant</a>
+                        <a href="../rues/avenue-des-fusilles-de-chateaubriant.html" class="btn-decouvrir">Découvrez l'histoire de l'Avenue des Fusillés de Châteaubriant</a>
                     </div>
                     <div class="famille-info" id="info-avenue-leopold-sedar-senghor">
-                        <h3>l'Avenue Léopold-Sédar-Senghor</h3>
-                        <img src="../images/senghor.webp" alt="Avenue Léopold-Sédar-Senghor" class="famille-img">
-                        <p>Découvrez l'Avenue Léopold-Sédar-Senghor</p>
-                        <a href="../rues/avenue-leopold-sedar-senghor.html" class="btn-decouvrir">Découvrez l'Avenue Léopold-Sédar-Senghor</a>
+                        <h3>l'Avenue Léopold Sédar Senghor</h3>
+                        <img src="../images/senghor.webp" alt="Avenue Léopold Sédar Senghor" class="famille-img">
+                        <a href="../rues/avenue-leopold-sedar-senghor.html" class="btn-decouvrir">Découvrez l'histoire de l'Avenue Léopold Sédar Senghor</a>
                     </div>
                     <div class="famille-info" id="info-avenue-pierre-brossolette">
-                        <h3>l'Avenue Pierre-Brossolette</h3>
-                        <img src="../images/brossolette.webp" alt="Avenue Pierre-Brossolette" class="famille-img">
-                        <p>Découvrez l'Avenue Pierre-Brossolette</p>
-                        <a href="../rues/avenue-pierre-brossolette.html" class="btn-decouvrir">Découvrez l'Avenue Pierre-Brossolette</a>
+                        <h3>l'Avenue Pierre Brossolette</h3>
+                        <img src="../images/brossolette.webp" alt="Avenue Pierre Brossolette" class="famille-img">
+                        <a href="../rues/avenue-pierre-brossolette.html" class="btn-decouvrir">Découvrez l'histoire de l'Avenue Pierre Brossolette</a>
                     </div>
                 </div>
             </div>
