--- a/rues/avenue-de-lattre-de-tassigny.html
+++ b/rues/avenue-de-lattre-de-tassigny.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>l'Avenue De Lattre-de-Tassigny</title>
+        <title>l'Avenue De Lattre de Tassigny</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/le-parc-saint-maur.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>l'Avenue De Lattre-de-Tassigny</h3>
+                    <h3>l'Avenue De Lattre de Tassigny</h3>
                     <p>L’avenue Charles Floquet prend le nom de De Lattre de Tassigny en 1952, l’année de la mort de ce dernier. Ce maréchal de France fut fait prisonnier par le gouvernement de Vichy en 1942 mais il s’évada et commanda la Première armée française en 1944-1945. Il mena la campagne victorieuse, dite « Rhin et Danube», contre le Troisième Reich et fut le représentant français à la signature de la capitulation allemande à Berlin, le 8 mai 1945. Il fut ensuite commandant en chef en Indochine. Il a été élevé à la dignité de maréchal de France après sa mort, à titre posthume.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="../images/avenue-de-lattre-de-tassigny.webp" alt="Avenue De Lattre-de-Tassigny">
+                    <img src="../images/avenue-de-lattre-de-tassigny.webp" alt="Avenue De Lattre de Tassigny">
                 </div>
             </section>
         </main>
