--- a/rues/avenue-leopold-sedar-senghor.html
+++ b/rues/avenue-leopold-sedar-senghor.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>l'Avenue Léopold-Sédar-Senghor</title>
+        <title>l'Avenue Léopold Sédar Senghor</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/le-parc-saint-maur.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>l'Avenue Léopold-Sédar-Senghor</h3>
+                    <h3>l'Avenue Léopold Sédar Senghor</h3>
                     <p>Ancien professeur de lettres au lycée Marcelin Berthelot, Léopold Sédar Senghor (1906-2001) combat dans le 31e régiment d’infanterie coloniale. Il échappe à la mort après avoir été fait prisonnier par les Allemands et rejoint ensuite la Résistance.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="../images/avenue-leopold-sedar-senghor.webp" alt="Avenue Léopold-Sédar-Senghor">
+                    <img src="../images/avenue-leopold-sedar-senghor.webp" alt="Avenue Léopold Sédar Senghor">
                 </div>
             </section>
         </main>
