--- a/rues/avenue-pierre-brossolette.html
+++ b/rues/avenue-pierre-brossolette.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>l'Avenue Pierre-Brossolette</title>
+        <title>l'Avenue Pierre Brossolette</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/le-parc-saint-maur.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>l'Avenue Pierre-Brossolette</h3>
+                    <h3>l'Avenue Pierre Brossolette</h3>
                     <p>Pierre Brossolette (1903-1944) est un journaliste et résistant. Arrêté par la Gestapo en 1944, il est torturé pendant plusieurs jours par les nazis. Il préfère se suicider plutôt que de dénoncer d’autres résistants.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="../images/avenue-pierre-brossolette.webp" alt="Avenue Pierre-Brossolette">
+                    <img src="../images/avenue-pierre-brossolette.webp" alt="Avenue Pierre Brossolette">
                 </div>
             </section>
         </main>
