--- a/rues/avenue-pierre-semard.html
+++ b/rues/avenue-pierre-semard.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>l'Avenue Pierre-Sémard</title>
+        <title>l'Avenue Pierre Sémard</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/champignol.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>l'Avenue Pierre-Sémard</h3>
+                    <h3>l'Avenue Pierre Sémard</h3>
                     <p>Depuis 1945, l’avenue des Deux-Stations a été rebaptisée Pierre Sémard. Ce dernier, communiste, fut secrétaire général de la Fédération des cheminots (CGT) et du Parti communiste français (PCF) et conseiller général de la Seine. Arrêté et incarcéré le 20 novembre 1939, il fut fusillé comme otage par les Allemands le 7 mars 1942.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="../images/avenue-pierre-semard.webp" alt="Avenue Pierre-Sémard ">
+                    <img src="../images/avenue-pierre-semard.webp" alt="Avenue Pierre Sémard ">
                 </div>
             </section>
         </main>
