--- a/rues/boulevard-du-general-giraud.html
+++ b/rues/boulevard-du-general-giraud.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>le Boulevard du Général-Giraud</title>
+        <title>le Boulevard du Général Giraud</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/la-pie.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>Le Boulevard du Général-Giraud</h3>
+                    <h3>Le Boulevard du Général Giraud</h3>
                     <p>Le boulevard porte aujourd'hui le nom d'un résistant, le général Henri Giraud. Co-président, avec le général de Gaulle, du Comité français de libération nationale (CFLN), il est aussi plusieurs mois au pouvoir en Afrique française du Nord après le débarquement allié de novembre 1942 et l’assassinat de l’amiral Darlan.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="../images/boulevard-du-general-giraud.webp" alt="Boulevard du Général-Giraud">
+                    <img src="../images/boulevard-du-general-giraud.webp" alt="Boulevard du Général Giraud">
                 </div>
             </section>
         </main>
