--- a/rues/carrefour-du-huit-mai-1945.html
+++ b/rues/carrefour-du-huit-mai-1945.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>Le Carrefour du Huit-Mai 1945</title>
+        <title>Le Carrefour du 8 Mai 1945</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/adamville.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>Le Carrefour du Huit-Mai 1945</h3>
-                    <p>En 1964, le carrefour de la Porte-Blanche devient le carrefour du Huit-Mai 1945. Cela fait bien évidemment référence à la date de la capitulation allemande à la fin de la Seconde Guerre mondiale.</p>
+                    <h3>Le Carrefour du 8 Mai 1945</h3>
+                    <p>En 1964, le carrefour de la Porte-Blanche devient le carrefour du 8 Mai 1945. Cela fait bien évidemment référence à la date de la capitulation allemande à la fin de la Seconde Guerre mondiale.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="../images/carrefour-du-huit-mai-1945.webp" alt="Carrefour du Huit-Mai 1945">
+                    <img src="../images/carrefour-du-huit-mai-1945.webp" alt="Carrefour du 8 Mai 1945">
                 </div>
             </section>
         </main>
