--- a/rues/place-du-marechal-juin.html
+++ b/rues/place-du-marechal-juin.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>la Place du Maréchal-Juin</title>
+        <title>la Place du Maréchal Juin</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/adamville.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>la Place du Maréchal-Juin</h3>
-                    <p>Inaugurée en 1969, la place du Maréchal-Juin, autrefois place de la République, rend hommage à Alphonse Juin (1888-1967), maréchal de France et figure majeure de la Seconde Guerre mondiale. En 1940, lors de la bataille de France, il commande la 15ᵉ division d'infanterie motorisée qui résiste à Gembloux, en Belgique. Capturé à Lille, il est interné à la forteresse de Königstein. Libéré en 1941 à la demande du maréchal Pétain, il est nommé commandant en chef des forces françaises en Afrique du Nord. Après le débarquement allié en Afrique du Nord en novembre 1942 (opération Torch), il est nommé à la tête du Corps expéditionnaire français en Italie, avec lequel il brise, notamment,  la ligne Gustave lors de la bataille de Garigliano en 1944.</p>
+                    <h3>la Place du Maréchal Juin</h3>
+                    <p>Inaugurée en 1969, la place du Maréchal Juin, autrefois place de la République, rend hommage à Alphonse Juin (1888-1967), maréchal de France et figure majeure de la Seconde Guerre mondiale. En 1940, lors de la bataille de France, il commande la 15ᵉ division d'infanterie motorisée qui résiste à Gembloux, en Belgique. Capturé à Lille, il est interné à la forteresse de Königstein. Libéré en 1941 à la demande du maréchal Pétain, il est nommé commandant en chef des forces françaises en Afrique du Nord. Après le débarquement allié en Afrique du Nord en novembre 1942 (opération Torch), il est nommé à la tête du Corps expéditionnaire français en Italie, avec lequel il brise, notamment,  la ligne Gustave lors de la bataille de Garigliano en 1944.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="../images/place-du-marechal-juin.webp" alt="Place du Maréchal-Juin">
+                    <img src="../images/place-du-marechal-juin.webp" alt="Place du Maréchal Juin">
                 </div>
             </section>
         </main>
