--- a/rues/square-emilie-tillion.html
+++ b/rues/square-emilie-tillion.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>le Square Émilie-Tillion</title>
+        <title>le Square Émilie Tillion</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/le-parc-saint-maur.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>le Square Émilie-Tillion</h3>
+                    <h3>le Square Émilie Tillion</h3>
                     <p>Emilie Tillion (1876-1945) est une résistante saint-maurienne. Comme sa fille, Germaine Tillion (1907-2008), elle fait partie d’un groupe de résistants, le réseau du musée de l’Homme. Elle est déportée à Ravensbrück où elle meurt le 2 mars 1945.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="../images/square-emilile-tillion.webp" alt="Square Émilie-Tillion">
+                    <img src="../images/square-emilile-tillion.webp" alt="Square Émilie Tillion">
                 </div>
             </section>
         </main>
