--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="famille-info" id="info-leparcsm">
                         <h3>Le quartier du Parc Saint-Maur</h3>
-                        <p>Découvrez le quartier du parc Saint-Maur </p>
+                        <p>Découvrez le quartier du Parc Saint-Maur </p>
                         <a href="quartier/le-parc-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-vieuxsm">
