--- a/quartier/champignol.html
+++ b/quartier/champignol.html
@@ -23,15 +23,14 @@
                     <div class="carte-container">
                         <img src="../images/champignol.webp" alt="carte de Champignol" class="carte-img">
                         <div class="marker-container" id="marker-container-avenue-pierre-semard" data-family="avenue-pierre-semard">
-                            <img src="../images/marker.webp" alt="Marker Avenue Pierre-Sémard" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Avenue Pierre Sémard" class="marker">
                         </div>
                     </div>
 
                     <div class="famille-info" id="info-avenue-pierre-semard">
-                        <h3>l'Avenue Pierre-Sémard</h3>
-                        <img src="../images/pierre-semard.webp" alt="Avenue Pierre-Sémard" class="famille-img">
-                        <p>Découvrez l'Avenue Pierre-Sémard</p>
-                        <a href="../rues/avenue-pierre-semard.html" class="btn-decouvrir">Découvrez l'Avenue Pierre-Sémard</a>
+                        <h3>l'Avenue Pierre Sémard</h3>
+                        <img src="../images/pierre-semard.webp" alt="Avenue Pierre Sémard" class="famille-img">
+                        <a href="../rues/avenue-pierre-semard.html" class="btn-decouvrir">Découvrez l'histoire de l'Avenue Pierre Sémard</a>
                     </div>
                     
                 </div>
