--- a/rues/avenue-du-general-leclerc.html
+++ b/rues/avenue-du-general-leclerc.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>l'Avenue du Général-Leclerc</title>
+        <title>l'Avenue du Général Leclerc</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/le-parc-saint-maur.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>l'Avenue du Général-Leclerc</h3>
-                    <p>Anciennement, avenue du Grand-Chêne, l’avenue du Général-Leclerc met à l’honneur, depuis le 11 avril 1948, Philippe de Hauteclocque, dit Leclerc (1902-1947), maréchal de France. Ce dernier est une figure majeure de la Libération, d’abord prisonnier pendant la bataille de France en 1940, il s’évade et rejoint Londres au côté du général de Gaulle. Il débarque en Normandie et libère Paris en 1944 à la tête de la 2eme division blindée (DB).</p>
+                    <h3>l'Avenue du Général Leclerc</h3>
+                    <p>Anciennement, avenue du Grand-Chêne, l’avenue du Général Leclerc met à l’honneur, depuis le 11 avril 1948, Philippe de Hauteclocque, dit Leclerc (1902-1947), maréchal de France. Ce dernier est une figure majeure de la Libération, d’abord prisonnier pendant la bataille de France en 1940, il s’évade et rejoint Londres au côté du général de Gaulle. Il débarque en Normandie et libère Paris en 1944 à la tête de la 2eme division blindée (DB).</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="../images/avenue-du-general-leclerc.webp" alt="Avenue du Général-Leclerc">
+                    <img src="../images/avenue-du-general-leclerc.webp" alt="Avenue du Général Leclerc">
                 </div>
             </section>
         </main>
