--- a/rues/place-jean-moulin.html
+++ b/rues/place-jean-moulin.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>la Place Jean-Moulin</title>
+        <title>la Place Jean Moulin</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/la-varenne.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>la Place Jean-Moulin</h3>
+                    <h3>la Place Jean Moulin</h3>
                     <p>Alors qu’il est préfet de l’Eure, Jean Moulin (1899-1943) préfère se rallier au Général de Gaulle plutôt que de collaborer avec l’occupant nazi. Il crée et dirige le Conseil national de la Résistance (CNR) dont la première réunion a lieu le 27 mai 1943. En raison de son implication dans la Résistance, il est trahi, arrêté et torturé par la Gestapo à Lyon. Il meurt pendant son transfert en Allemagne.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="../images/place-jean-moulin.webp" alt="Place Jean-Moulin">
+                    <img src="../images/place-jean-moulin.webp" alt="Place Jean Moulin">
                 </div>
             </section>
         </main>
