--- a/rues/rue-de-bir-hakeim.html
+++ b/rues/rue-de-bir-hakeim.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>La Rue de Bir-Hakeim</title>
+        <title>La Rue de Bir Hakeim</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/adamville.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>La Rue de Bir-Hakeim</h3>
-                    <p>La bataille de Bir-Hakeim rappelle le combat acharné de la Résistance. La 1re Brigade française Libre composée de 3 700 hommes impose d’importantes pertes aux 37 000 soldats des Deutsches Afrikakorps et Corpo d’armata. On compte par exemple 170 morts pour la BFL contre 3 300 blessés, tués ou disparus pour les forces nazies.</p>
+                    <h3>La Rue de Bir Hakeim</h3>
+                    <p>La bataille de Bir Hakeim rappelle le combat acharné de la Résistance. La 1re Brigade française Libre composée de 3 700 hommes impose d’importantes pertes aux 37 000 soldats des Deutsches Afrikakorps et Corpo d’armata. On compte par exemple 170 morts pour la BFL contre 3 300 blessés, tués ou disparus pour les forces nazies.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="../images/rue-de-bir-hakeim.webp" alt="Rue de Bir-Hakeim">
+                    <img src="../images/rue-de-bir-hakeim.webp" alt="Rue de Bir Hakeim">
                 </div>
             </section>
         </main>
