--- a/rues/square-victor-basch.html
+++ b/rues/square-victor-basch.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>le Square Victor-Basch</title>
+        <title>le Square Victor Basch</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/vieux-saint-maur.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>Le Square Victor-Basch</h3>
+                    <h3>Le Square Victor Basch</h3>
                     <p>Victor Basch, philosophe et homme politique, président de la Ligue des droits de l'homme, s’engage contre l’extrême droite dès les années 1920-1930. En 1940, il fuit en zone libre avec sa femme. Victor Basch est recherché par Vichy et le 10 janvier 1944, il est arrêté avec sa femme par Touvier en personne et le couple meurt fusillé le soir même par des miliciens.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="../images/square-victor-basch.webp" alt="Square Victor-Basch">
+                    <img src="../images/square-victor-basch.webp" alt="Square Victor Basch">
                 </div>
             </section>
         </main>
